# Star-on-Earth

./: Cargo.toml  Evolution.md  LICENSE  README.md
examples/: blackwell-sm-imported.chip  blackwell-sm-ports.chip  blackwell-sm.chip  invalid-sm.chip  sm-memory.chip
examples/fragments/: tensor-core.chipfrag  warp-scheduler.chipfrag
src/: ir.rs  lib.rs  main.rs  parser.rs  semantic.rs  state.rs
